--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,8 @@ repositories {
 }
 
 dependencies {
-    api platform('com.exactpro.th2:bom:2.0.+')
+    api platform('com.exactpro.th2:bom:2.1.+')
+    implementation "com.exactpro.th2:grpc-common"
 
     implementation "com.google.protobuf:protobuf-java-util"
     implementation "io.grpc:grpc-protobuf"
