--- a/gradle.properties
+++ b/gradle.properties
@@ -5,3 +5,7 @@ artifactory_deploy_repo_key=
 artifactory_resolve_repo_key=
 artifactory_user=
 artifactory_password=
+
+nexus_url=
+nexus_user=
+nexus_password=
