--- a/.github/workflows/java-publish-bintray.yml
+++ b/.github/workflows/java-publish-bintray.yml
@@ -2,10 +2,10 @@ name: Build and publish Java distributions to Bintray
 
 on:
   push:
-#     branches:
-#     - master
-# #     paths:
-# #     - gradle.properties
+    branches:
+    - master
+#     paths:
+#     - gradle.properties
 
 jobs:
   build:
