--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,4 @@
 #   limitations under the License.
 
 
-grpcio-tools==1.33.1
-google-api-core==1.23.0
-twine==3.2.0
-th2-grpc-common==2.3.1
+th2-grpc-common~=2.3.5
