[TH2-1446] Update dependencies. Bump version.

--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,7 @@ repositories {
 }
 
 dependencies {
-    api platform('com.exactpro.th2:bom:2.10.+')
+    api platform('com.exactpro.th2:bom:2.10.1')
     implementation "com.exactpro.th2:grpc-common:3.0.0"
 
     api "com.google.protobuf:protobuf-java-util"
