--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,4 @@
-release_version=2.6.3
-
-bintray_user=
-bintray_key=
+release_version=2.6.4
+description = 'th2 gRPC hand library'
 
 vcs_url=https://github.com/th2-net/th2-grpc-hand
