--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,14 @@
+buildscript {
+    repositories {
+        maven {
+            name 'Bintray'
+            url 'https://dl.bintray.com/exactpro/th2'
+        }
+    }
+    dependencies {
+        classpath "com.exactpro.th2:grpc-service-generator:2.0.5"
+    }
+}
 plugins {
     id 'java'
     id 'java-library'
@@ -5,7 +16,6 @@ plugins {
     id "io.github.gradle-nexus.publish-plugin" version "1.0.0"
     id 'signing'
     id "com.google.protobuf" version "0.8.15"
-    id "com.exactpro.th2.service-generator"
 }
 
 group = 'com.exactpro.th2'
