--- a/.github/workflows/dev-grpc-services-pypi-publish.yml
+++ b/.github/workflows/dev-grpc-services-pypi-publish.yml
@@ -1,4 +1,4 @@
-name: Dev build and publish Python distributions to PyPI. New gRPC generator
+name: Dev build and publish Python distributions to PyPI
 
 on:
   push:
@@ -21,6 +21,12 @@ jobs:
       with: 
         path: package_info.json
         prop_path: package_version
+    - name: Get package name
+      id: pack_name
+      uses: notiz-dev/github-action-json-property@release
+      with:
+        path: package_info.json
+        prop_path: package_name
     - name: Build custom package version
       id: release_ver
       run: echo ::set-output name=value::"${{ steps.pack_ver.outputs.prop }}.dev${{ github.run_id }}"
@@ -37,12 +43,14 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: 3.7
-    - name: Set up JDK 11
-      uses: actions/setup-java@v1
+    - name: Create output folder
+      run: mkdir -p src/gen/main/python/${{steps.pack_name.outputs.prop}}
+    - name: Run codegen
+      uses: docker://ghcr.io/th2-net/th2-python-service-generator:1.1.1
       with:
-        java-version: '11'
-    - name: Build with Gradle
-      run: ./gradlew clean build
+        entrypoint: /home/service/bin/service
+        args: |
+          -p /github/workspace/src/main/proto/${{steps.pack_name.outputs.prop}} -w PythonServiceWriter -o /github/workspace/src/gen/main/python/${{steps.pack_name.outputs.prop}}
     - name: Build package
       run: |
         pip install -r requirements.txt
