migration to sonatype

--- a/.github/workflows/grpc-services-pypi-publish.yml
+++ b/.github/workflows/grpc-services-pypi-publish.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
     - master
-#     paths:
-#     - package_info.json
+    paths:
+    - package_info.json
 
 jobs:
   build-n-publish:
