--- a/.github/workflows/dev-java-publish-sonatype.yml
+++ b/.github/workflows/dev-java-publish-sonatype.yml
@@ -1,11 +1,11 @@
-name: Dev build and publish Java distributions to Bintray
+name: Dev build and publish Java distributions to sonatype snapshot repository
 
 on:
   push:
     branches-ignore:
-      - master
-#     paths:
-#     - gradle.properties
+    - master
+    # paths:
+    # - gradle.properties
 
 jobs:
   build:
@@ -13,7 +13,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      # Prepare custom build version
+# Prepare custom build version
       - name: Get branch name
         id: branch
         run: echo ::set-output name=branch_name::${GITHUB_REF#refs/*/}
@@ -25,7 +25,7 @@ jobs:
           property: release_version
       - name: Build custom release version
         id: release_ver
-        run: echo ::set-output name=value::"${{ steps.ver.outputs.value }}-${{ steps.branch.outputs.branch_name }}-${{ github.run_id }}"
+        run: echo ::set-output name=value::"${{ steps.ver.outputs.value }}-${{ steps.branch.outputs.branch_name }}-${{ github.run_id }}-SNAPSHOT"
       - name: Write custom release version to file
         uses: christian-draeger/write-properties@1.0.1
         with:
@@ -34,11 +34,16 @@ jobs:
           value: ${{ steps.release_ver.outputs.value }}
       - name: Show custom release version
         run: echo ${{ steps.release_ver.outputs.value }}
-      # Build and publish package
+# Build and publish package
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
           java-version: '11'
       - name: Build with Gradle
-        run: ./gradlew clean build bintrayUpload -Pbintray_user=${{ secrets.BINTRAY_USER }} -Pbintray_key=${{ secrets.BINTRAY_KEY }}
+        run: ./gradlew --info clean build publish
+        env:
+          ORG_GRADLE_PROJECT_sonatypeUsername: ${{ secrets.SONATYPE_NEXUS_USERNAME }}
+          ORG_GRADLE_PROJECT_sonatypePassword: ${{ secrets.SONATYPE_NEXUS_PASSWORD }}
+          ORG_GRADLE_PROJECT_signingKey: ${{ secrets.SONATYPE_GPG_ARMORED_KEY }}
+          ORG_GRADLE_PROJECT_signingPassword: ${{ secrets.SONATYPE_SIGNING_PASSWORD }} 
 
