--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation "io.grpc:grpc-netty"
 
     implementation "javax.annotation:javax.annotation-api:1.3.2"
+    implementation "com.exactpro.th2:grpc-service-generator:3.1.8"
 }
 
 sourceSets {
