--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,7 @@ dependencies {
     implementation "io.grpc:grpc-netty"
 
     implementation "javax.annotation:javax.annotation-api:1.3.2"
-    implementation "com.exactpro.th2:grpc-service-generator:3.1.8"
+    api "com.exactpro.th2:grpc-service-generator:3.1.8"
 }
 
 sourceSets {
@@ -186,5 +186,5 @@ signing {
 
 clean {
     delete genDir
-    delete sharedDir
+    delete sharedDir 
 }
