--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ targetCompatibility = 11
 ext {
     grpcVersion         = '1.32.1'
     protobufVersion     = '3.13.0'
-    serviceGeneratorVersion = '3.1.8'
+    serviceGeneratorVersion = '3.1.10'
 
     genDir              = file("${project.rootDir}/src/gen")
     sharedDir           = file("${project.rootDir}/shared")
@@ -59,7 +59,10 @@ sourceSets {
             srcDirs 'src/main/proto'
         }
         java {
-            srcDirs 'src/gen/main/java', 'src/gen/main/grpc', 'src/gen/main/services'
+            srcDirs 'src/gen/main/java', 'src/gen/main/grpc', 'src/gen/main/services/java/src'
+        }
+        resources {
+            srcDirs 'src/gen/main/services/java/resources'
         }
     }
 }
