th2-gradle-plugin upd to actions/checkout@v4

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
 release_version=3.0.0
-description = 'th2 gRPC hand library'
+version_suffix=
+description='th2 gRPC hand library'
 
 vcs_url=https://github.com/th2-net/th2-grpc-hand
